# downly

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  compose.development.yaml  compose.yaml  docker-compose.yml  go.mod  go.sum  logger.conf  main.py  pyproject.toml  requirements.txt  ruff.toml  sample-config.yaml
cmd/downly/: main.go
downly/: __init__.py  __main__.py  downly.py
downly/clients/: rabbitmq.py  telegram.py
downly/config/: __init__.py
downly/database/: __init__.py  chat_settings_sql.py  downloads_sql.py  users_sql.py
downly/engine/: cobalt.py  stream_downloader.py
downly/handlers/: admin.py  stream_downloader.py  youtube_downloader.py
downly/models/: config.py
downly/monitor/: __init__.py
downly/plugins/: dd_mode.py  download.py  logger.py  start.py  stats.py  welcome.py
downly/queue/: __init__.py  queue.py
downly/rabbitmq/: client.py  connection.py  consumer.py  publisher.py  registry.py  types.py
downly/utils/: b_logger.py  bot_info.py  fire_and_forget.py  fs_utils.py  message.py  progress.py  send_video.py  validator.py  yaml_utils.py
internal/cleanup/: cleanup.go
internal/config/: config.go  config_test.go
internal/db/: jobs.go
internal/downloader/: ytdlp.go  ytdlp_test.go
internal/logging/: logging.go
internal/migrate/: migrate.go
internal/reaper/: reaper.go
internal/statsreport/: statsreport.go
internal/telegram/: bot.go  bot_test.go
internal/updater/: updater.go
internal/worker/: control.go  worker.go  (+1 more)
worker/: .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go  mix.exs
(+29 files in other folders)
